Tugas form & penambahan form di index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href="pages/tf.html">Text Formatting</a><br><br>
     <a href="pages/list.html">list</a><br><br>
     <a href="pages/table.html">Table & Img</a><br><br>
+    <a href="pages/form.html">Form</a><br><br>
 
 
 </body>
