--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <a href="pages/tf.html">Text Formatting</a><br><br>
     <a href="pages/list.html">list</a><br><br>
     <a href="pages/table.html">Table & Img</a><br><br>
-    <a href="pages/form.html">Form</a><br><br><br>
-    <a href="pages/login.html">Login Form</a>
+    <a href="pages/form.html">Form</a><br><br>
+    <a href="pages/login.html">Login Form</a><br><br>
+    <a href="pages/product.html">Product</a>
 
 
 </body>
