--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="pages/form.html">Form</a><br><br>
     <a href="pages/login.html">Login Form</a><br><br>
     <a href="pages/product.html">Product</a>
+    <a href="pages/jsdasar.html">Fundamental JS</a>
 
 
 </body>
