--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a href="pages/login.html">Login Form</a><br><br>
     <a href="pages/product.html">Product</a>
     <a href="pages/jsdasar.html">Fundamental JS</a>
+    <a href="pages/landing.html"></a>
 
 
 </body>
