menambahkan landing pada index.html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <a href="pages/table.html">Table & Img</a><br><br>
     <a href="pages/form.html">Form</a><br><br>
     <a href="pages/login.html">Login Form</a><br><br>
-    <a href="pages/product.html">Product</a>
-    <a href="pages/jsdasar.html">Fundamental JS</a>
-    <a href="pages/landing.html"></a>
+    <a href="pages/product.html">Product</a><br><br>
+    <a href="pages/jsdasar.html">Fundamental JS</a><br><br>
+    <a href="pages/landing.html">Landing</a><br><br>
 
 
 </body>
