--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a href="pages/product.html">Product</a><br><br>
     <a href="pages/jsdasar.html">Fundamental JS</a><br><br>
     <a href="pages/landing.html">Landing</a><br><br>
+    <a href="pages/landingdom.html">Landing DOM</a><br><br>
 
 
 </body>
