Penambahan product array

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <a href="pages/jsdasar.html">Fundamental JS</a><br><br>
     <a href="pages/landing.html">Landing</a><br><br>
     <a href="pages/landingdom.html">Landing DOM</a><br><br>
+    <a href="pages/productarray.html">Product Array JS</a><br><br>
 
 
 </body>
