--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <a href="pages/landing.html">Landing</a><br><br>
     <a href="pages/landingdom.html">Landing DOM</a><br><br>
     <a href="pages/productarray.html">Product Array JS</a><br><br>
+    <a href="pages/productapi.html">Product API</a><br><br>
 
 
 </body>
