Web Layout & Responsif

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <a href="pages/landingdom.html">Landing DOM</a><br><br>
     <a href="pages/productarray.html">Product Array JS</a><br><br>
     <a href="pages/productapi.html">Product API</a><br><br>
+    <a href="pages/login-responsive.html">Login Responsive</a><br><br>
+    <a href="pages/product-responsive.html">Product Responsive</a><br><br>
 
 
 </body>
