--- a/pages/login-responsive.html
+++ b/pages/login-responsive.html
@@ -3,8 +3,8 @@
 <head>
     <!-- <meta charset="UTF-8"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="../assets/css/styles.css">
+    <title>Login Responsif</title>
+    <link rel="stylesheet" href="../assets/css/stylerlogin.css">
 </head>
 
 <body>
